# rpcstream

./: .gitignore  Cargo.toml  README.md
cmd/: Cargo.toml
cmd/src/: cli.rs  svr.rs
rstream/: Cargo.toml  build.rs
rstream/proto/: rpcstream.proto
rstream/src/: cli.rs  lib.rs  remote_buf.rs  stream.rs  svc.rs
