[workspace]
members = ["cmd", "rstream"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
futures = "0.3.30"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
prost-derive = "0.12.4"
tonic-build = "0.11.0"
pin-project = "1.1.6"
